// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount an open modal 1`] = `
<ModalExample>
  <div>
    <Modal
      ariaLabel="Terra Modal"
      classNameModal={null}
      classNameOverlay={null}
      closeOnEsc={true}
      closeOnOutsideClick={true}
      isFocused={true}
      isFullscreen={false}
      isOpen={true}
      isScrollable={false}
      onRequestClose={[Function]}
      role="document"
    >
      <Portal
        isOpened={true}
        onClose={[Function]}
        onOpen={[Function]}
        onUpdate={[Function]}
      />
    </Modal>
    <button
      onClick={[Function]}
    >
      Open Modal
    </button>
  </div>
</ModalExample>
`;

exports[`should render an open modal 1`] = `
<div>
  <button>
    Open Modal
  </button>
</div>
`;

exports[`should shallow an open modal 1`] = `
<div>
  <Modal
    ariaLabel="Terra Modal"
    classNameModal={null}
    classNameOverlay={null}
    closeOnEsc={true}
    closeOnOutsideClick={true}
    isFocused={true}
    isFullscreen={false}
    isOpen={true}
    isScrollable={false}
    onRequestClose={[Function]}
    role="document"
  >
    <div>
      <h1>
        Terra Modal
      </h1>
      <button
        onClick={[Function]}
      >
        Close Modal
      </button>
    </div>
  </Modal>
  <button
    onClick={[Function]}
  >
    Open Modal
  </button>
</div>
`;
